--- a/Challenges/001-qr-code-component-main/index.html
+++ b/Challenges/001-qr-code-component-main/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+
 
     <link
       rel="icon"
@@ -12,28 +12,22 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | QR code component</title>
+    <link rel="stylesheet" href="style.css">
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <div class="card card_common" style="padding-top: 0.5rem;">
+      <div>
+        <img class="card_common" src="./images/image-qr-code.png" alt="An QR code for scanner with phon" width="300px" >
+      </div>
+      <div> 
+        <h4 style="padding-left: 0.5rem; padding-right: 0.5rem; font-size: x-large; margin-top: 0; margin-bottom: 0;">
+          Improve your front-end skills by building projects
+        </h4>
+        <p style="padding-left: 0.5rem; padding-right: 0.5rem; font-size: medium; color: hsl(216, 15%, 48%); padding-left: 25px; padding-right: 25px;">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
     </div>
   </body>
 </html>
