change name for the local data and add new item

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="grid" id="challengeGrid"></div>
 
     <script>
-      fetch("challenges.json")
+      fetch("Data.json")
         .then((response) => response.json())
         .then((data) => {
           const grid = document.getElementById("challengeGrid");
